src/components/Product/Product.scss
.product {
  a {
    display: flex;
    height: 100%;
    flex-direction: column;
    color: black;
    text-decoration: none;

    .img-container {
      flex-grow: 1;
      align-items: center;
      justify-content: center;
      max-height: calc(100% - 3rem);
    }

    .product-info {
      margin-top: 4px;
    }
  }

  img {
    width: 100%;
    height: 100%;
    object-fit: contain;
  }

  &.item {
    grid-row-end: span 1;
    grid-column-end: span 1;

    &-tall {
      grid-row-end: span 2;
    }

    &-wide {
      grid-column-end: span 2;
    }

    &-single-row {
      grid-row: 1;
    }
  }

  .product-detail {
    padding: 4px;
    opacity: 1;
  }
}

